--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@rainbow-me/rainbowkit": "^0.4.2",
     "@tailwindcss/typography": "^0.5.2",
     "autoprefixer": "^10.4.7",
+    "axios": "^0.27.2",
     "ethers": "^5.6.9",
     "next": "^12.1.6",
     "next-themes": "^0.2.0",
